syntax = "proto3";
package publish;
option go_package = "tinytiktok/user/proto/publish";

message CalcWorkCountRequest{
  int64 user_id = 1;
  bool isPublish = 2;
}

message CalcWorkCountResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}